2007-03-26  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs,
	  libsteticui/CodeGeneratorPartialClass.cs,
	  libstetic/wrapper/Widget.cs, libstetic/wrapper/objects.xml: Support
	  generating private classes.
	* libsteticui/ComponentType.cs, libstetic/ImageInfo.cs,
	  libstetic/wrapper/Action.cs, libstetic/wrapper/ImageMenuItem.cs,
	  libstetic/editor/StockItem.cs, libstetic/WidgetUtils.cs: Use the
	  new MissingIcon constant.
	* libstetic/wrapper/ComboBox.cs: Made combo values translatable. Fixes
	  bug #81033.
	* libstetic/HandleWindow.cs: Removed unused file.

2007-03-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Container.cs: Fix null ref.
	* libstetic/wrapper/Widget.cs: Use a wrapper property for CanFocus
	  since it may be changed by the designer.

2007-03-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetDesignerBackend.cs: ResetSelection now sets the
	  focus to the fixed container.
	* libsteticui/PropertyTree.cs: Dispose the edit session of a cell when
	  losing the focus.
	* libsteticui/PaletteBackend.cs: Don't call SetActionGroups when
	  disposing, since it ends calling show().
	* libstetic/wrapper/Container.cs: Use ResetSelection to remove the
	  focus from the current widget.
	* libstetic/editor/TextEditor.cs: Don't fire the changed event at every
	  key press, only when pressing enter or losing the focus.
	* libstetic/PropertyEditorCell.cs: When losing the focus, update the
	  property value.
	* libstetic/wrapper/Widget.cs: Don't try to change widget event flags
	  if the widget is already realized.

2007-03-06  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs: Added some null checks. Added
	  BeginComponentDrag, to allow using an external toolbox.
	* libsteticui/ProjectBackend.cs, libsteticui/WidgetDesigner.cs,
	  libsteticui/Project.cs: Added method for getting all component
	  types accessible from a project. Added some null checks.